Implement /checkIfAlreadyAttended #10 @20m
