# project-related files/swagger.yaml
@@ -293,6 +293,33 @@ paths:
             type: "array"
             items:
               $ref: '#/definitions/VolunteerToRate'
+  /checkIfAlreadyAttended:
+    post:
+      tags:
+        - "Volunteer-related information"
+      summary: "API to check if volunteer already attended the activity"
+      description: ""
+      operationId: "checkIfAlreadyAttended"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "activity_id"
+          in: "path"
+          description: "ID of the activity"
+          required: true
+          type: "string"
+        - name: "volunteer_id"
+          in: "path"
+          description: "ID of the activity"
+          required: true
+          type: "string"
+      responses:
+        200:
+          description: "Status is always 200 (Needs to be fixed). Message if volunteer already joined the activity"
+          schema:
+            $ref: "#/definitions/Message"
 definitions:
   Activity:
     type: "object"
